# trendwise

./: .env.example  .gitignore  CONTEXT.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  openapi.py  worker.py
backend/app/core/: config.py
backend/app/database/: connection.py  seed.py
backend/app/database/seed_data/: stock_detail.csv  supported_stocks.csv
backend/app/database/seeders/: __init__.py  base.py  runner.py  stock_detail.py  supported_stocks.py
backend/app/forecasts/: __init__.py  baseline.py  horizons.py  models.py  pipeline.py
backend/app/providers/: __init__.py  http.py  interfaces.py  yahoo.py
backend/app/stocks/: repository.py  router.py  schemas.py
backend/app/storage/: repositories.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_persistence_schema.py  0002_forecast_detail_outputs.py
backend/tests/: test_cors.py  test_dev_script.py  test_health.py  test_local_infrastructure.py  test_local_setup_docs.py  test_mobile_shell.py
backend/tests/database/: test_seeders.py
backend/tests/forecasts/: test_baseline.py  test_horizons.py  test_pipeline.py
backend/tests/providers/: test_http.py  test_yahoo.py
backend/tests/stocks/: test_stock_detail.py  test_stock_search.py
backend/tests/storage/: test_migrations.py  test_repositories.py
docs/: prd-stock-predictor-prototype.md  product-v1.md  tasks-v1.md
infra/: otel-collector-config.yml
mobile/: App.tsx  Dockerfile  app.json  package-lock.json  package.json  tsconfig.test.json
scripts/: dev
(+57 files in other folders)
