[project]
name = "trendwise-backend"
version = "0.1.0"
description = "FastAPI backend for the Trendwise prototype."
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.14,<2",
    "celery>=5.4,<6",
    "fastapi>=0.115,<1",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.6,<3",
    "redis>=5,<6",
    "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2,<3",
    "pytest>=8,<9",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
